# public/api-docs/swagger.json
@@ -15,6 +15,14 @@
         {
             "name": "Home Page Data",
             "description": "All Home Page Data"
+        },
+        {
+            "name": "Category Page Data",
+            "description": "All Category Page Data"
+        },
+        {
+            "name": "Product Page Data",
+            "description": "All Product Page Data"
         }
     ],
     "paths": {
@@ -212,6 +220,33 @@
                     }
                 ],
                 "parameters": [],
+                "responses": {
+                    "200": {
+                        "description": "Data"
+                    }
+                }
+            }
+        },
+        "/getCategoryData/{slug}": {
+            "get": {
+                "tags": ["Category Page Data"],
+                "summary": "Get Category Page Data",
+                "operationId": "getCategoryData",
+                "produces": ["application/json"],
+                "security": [
+                    {
+                        "APIKeyHeader": []
+                    }
+                ],
+                "parameters": [
+                    {
+                        "name": "slug",
+                        "in": "path",
+                        "description": "Category slug",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Data"
